# razorpay-itch-solver

./: .env.example  README.md
problem-supplier-verification-ai-engine/: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
problem-supplier-verification-ai-engine/infra/docker/: Dockerfile  docker-compose.yml
problem-supplier-verification-ai-engine/infra/k8s/: deployment.yml
problem-supplier-verification-ai-engine/migrations/: env.py
problem-supplier-verification-ai-engine/migrations/versions/: 189da615cfc6_initial_supplier_table.py
problem-supplier-verification-ai-engine/src/agents/: researcher.py  tools.py
problem-supplier-verification-ai-engine/src/api/: main.py
problem-supplier-verification-ai-engine/src/config/: settings.py
problem-supplier-verification-ai-engine/src/models/: supplier.py
problem-supplier-verification-ai-engine/src/services/: db.py  redis.py
problem-supplier-verification-ai-engine/src/utils/: parsers.py
problem-supplier-verification-ai-engine/src/workers/: celery_app.py  tasks.py
